// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewsletterPreference component renders correctly and displays marketing information 1`] = `
.emotion-0 {
  font-size: 14px;
  font-family: "Guardian Text Sans Web","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
  line-height: 1.333;
  margin-top: 12px;
  padding-left: 30px;
  position: relative;
}

.emotion-1 {
  position: absolute;
  left: 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-2:hover .checkbox {
  box-shadow: 0 0 0 3px #EDEDED;
}

.emotion-3 {
  -webkit-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
  border: 1px solid #999999;
  min-width: 18px;
  height: 18px;
  display: inline-block;
  margin: 3px;
  margin-right: 10px;
  background: #FFFFFF;
  position: relative;
  outline: 0;
}

.emotion-3:focus {
  box-shadow: 0 0 0 3px #FFE500;
}

.emotion-4 {
  position: absolute;
  z-index: -999999;
  overflow: hidden;
  opacity: 0;
}

.emotion-5 {
  position: absolute;
  left: 3px;
  top: 5px;
  width: 12px;
  height: 6px;
  -webkit-transform: rotate(-45deg);
  -moz-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  text-align: right;
}

.emotion-6 {
  width: 2px;
  height: 6px;
  border-color: #FFFFFF;
  border-width: 0 0 2px 2px;
  border-style: solid;
  -webkit-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
  transition-delay: .1s;
}

.emotion-7 {
  font-size: 14px;
  font-family: "Guardian Text Sans Web","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
  cursor: pointer;
  font-size: 14px;
  line-height: 22px;
  font-family: "Guardian Text Sans Web","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
  font-weight: bold;
  margin: 0;
}

.emotion-8 {
  padding: 2.88px 0 0 0;
}

.emotion-9 {
  font-size: 12px;
  line-height: 16px;
  margin: 3px 0 0 0;
  opacity: 0.75;
}

.emotion-10 {
  display: inline-block;
  margin-right: 8px;
  vertical-align: middle;
}

.emotion-11 {
  fill: #DCDCDC;
}

<div
  className="emotion-0"
  data-cy="13"
  onClick={[Function]}
>
  <div
    className="emotion-1"
  >
    <label
      className="emotion-2"
    >
      <div
        aria-checked={false}
        className="checkbox emotion-3"
        onKeyPress={[Function]}
        role="checkbox"
        tabIndex={0}
      >
        <input
          checked={false}
          className="emotion-4"
          onChange={[Function]}
          tabIndex={-1}
          type="checkbox"
        />
        <div
          className="emotion-5"
        >
          <div
            className="emotion-6"
          />
        </div>
      </div>
      <span />
    </label>
  </div>
  <p
    className="emotion-7"
  >
    Test title
  </p>
  <p
    className="emotion-8"
  >
    Test description
  </p>
  <p
    className="emotion-9"
  >
    <span
      className="emotion-10"
    >
      <svg
        className="emotion-11"
        height="11px"
        viewBox="0 0 11 11"
        width="11px"
      >
        <path
          d="M5.4 0C2.4 0 0 2.4 0 5.4s2.4 5.4 5.4 5.4 5.4-2.4 5.4-5.4S8.4 0 5.4 0zm3 6.8H4.7V1.7h.7L6 5.4l2.4.6v.8z"
        />
      </svg>
    </span>
    Test frequency
  </p>
</div>
`;

exports[`NewsletterPreference component will select the checkbox when the selected prop is passed 1`] = `
.emotion-0 {
  font-size: 14px;
  font-family: "Guardian Text Sans Web","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
  line-height: 1.333;
  margin-top: 12px;
  padding-left: 30px;
  position: relative;
}

.emotion-1 {
  position: absolute;
  left: 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-2:hover .checkbox {
  box-shadow: 0 0 0 3px #EDEDED;
}

.emotion-3 {
  -webkit-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
  min-width: 18px;
  height: 18px;
  display: inline-block;
  margin: 3px;
  margin-right: 10px;
  background: #22874D;
  position: relative;
  outline: 0;
}

.emotion-3:focus {
  box-shadow: 0 0 0 3px #FFE500;
}

.emotion-4 {
  position: absolute;
  z-index: -999999;
  overflow: hidden;
  opacity: 0;
}

.emotion-5 {
  position: absolute;
  left: 3px;
  top: 5px;
  width: 12px;
  height: 6px;
  -webkit-transform: rotate(-45deg);
  -moz-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  text-align: right;
}

.emotion-6 {
  width: 12px;
  height: 6px;
  border-color: #FFFFFF;
  border-width: 0 0 2px 2px;
  border-style: solid;
  -webkit-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
  transition-delay: .1s;
}

.emotion-7 {
  font-size: 14px;
  font-family: "Guardian Text Sans Web","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
  cursor: pointer;
  font-size: 14px;
  line-height: 22px;
  font-family: "Guardian Text Sans Web","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
  font-weight: bold;
  margin: 0;
}

.emotion-8 {
  padding: 2.88px 0 0 0;
}

.emotion-9 {
  font-size: 12px;
  line-height: 16px;
  margin: 3px 0 0 0;
  opacity: 0.75;
}

.emotion-10 {
  display: inline-block;
  margin-right: 8px;
  vertical-align: middle;
}

.emotion-11 {
  fill: #DCDCDC;
}

<div
  className="emotion-0"
  data-cy="13"
  onClick={[Function]}
>
  <div
    className="emotion-1"
  >
    <label
      className="emotion-2"
    >
      <div
        aria-checked={true}
        className="checkbox emotion-3"
        onKeyPress={[Function]}
        role="checkbox"
        tabIndex={0}
      >
        <input
          checked={true}
          className="emotion-4"
          onChange={[Function]}
          tabIndex={-1}
          type="checkbox"
        />
        <div
          className="emotion-5"
        >
          <div
            className="emotion-6"
          />
        </div>
      </div>
      <span />
    </label>
  </div>
  <p
    className="emotion-7"
  >
    Test title
  </p>
  <p
    className="emotion-8"
  >
    Test description
  </p>
  <p
    className="emotion-9"
  >
    <span
      className="emotion-10"
    >
      <svg
        className="emotion-11"
        height="11px"
        viewBox="0 0 11 11"
        width="11px"
      >
        <path
          d="M5.4 0C2.4 0 0 2.4 0 5.4s2.4 5.4 5.4 5.4 5.4-2.4 5.4-5.4S8.4 0 5.4 0zm3 6.8H4.7V1.7h.7L6 5.4l2.4.6v.8z"
        />
      </svg>
    </span>
    Test frequency
  </p>
</div>
`;
